[package]
name = "voicetimebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
humantime = "2.1.0"
serenity = { version="0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
